Put compaction job back on queue if compaction fails