@@ -21,12 +21,14 @@ import com.amazonaws.services.s3.AmazonS3;
 import com.amazonaws.services.s3.AmazonS3ClientBuilder;
 import com.amazonaws.services.sqs.AmazonSQS;
 import com.amazonaws.services.sqs.AmazonSQSClientBuilder;
+import com.amazonaws.services.sqs.model.Message;
 import com.amazonaws.services.sqs.model.ReceiveMessageRequest;
 import com.amazonaws.services.sqs.model.ReceiveMessageResult;
 import com.amazonaws.services.sqs.model.SendMessageRequest;
 import org.apache.hadoop.fs.Path;
 import org.apache.parquet.hadoop.ParquetWriter;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.testcontainers.containers.localstack.LocalStackContainer;
@@ -57,17 +59,19 @@ import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.LongType;
 import sleeper.core.statestore.FileInfo;
+import sleeper.core.statestore.FileInfoFactory;
 import sleeper.core.statestore.StateStore;
 import sleeper.core.statestore.StateStoreException;
 import sleeper.io.parquet.record.ParquetRecordWriterFactory;
 import sleeper.statestore.StateStoreProvider;
 import sleeper.statestore.s3.S3StateStoreCreator;
 
-import java.util.Arrays;
+import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.function.Function;
 
-import static java.nio.file.Files.createTempDirectory;
 import static org.assertj.core.api.Assertions.assertThat;
 import static sleeper.configuration.properties.InstancePropertiesTestHelper.createTestInstanceProperties;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.COMPACTION_JOB_QUEUE_URL;
@@ -97,6 +101,8 @@ public class CompactSortedFilesRunnerLocalStackIT {
     private final Schema schema = createSchema();
     private final TableProperties tableProperties = createTable();
     private final String tableId = tableProperties.get(TABLE_ID);
+    private final CompactionJobStatusStore jobStatusStore = CompactionJobStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
+    private final CompactionTaskStatusStore taskStatusStore = CompactionTaskStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
 
     private InstanceProperties createInstance() {
         InstanceProperties instanceProperties = createTestInstanceProperties();
@@ -131,7 +137,7 @@ public class CompactSortedFilesRunnerLocalStackIT {
         return tableProperties;
     }
 
-    private StateStore stateStore() {
+    private StateStore getStateStore() {
         return stateStoreProvider.getStateStore(tableProperties);
     }
 
@@ -142,104 +148,49 @@ public class CompactSortedFilesRunnerLocalStackIT {
         sqs.shutdown();
     }
 
+    @BeforeEach
+    void setUp() {
+        DynamoDBCompactionJobStatusStoreCreator.create(instanceProperties, dynamoDB);
+        DynamoDBCompactionTaskStatusStoreCreator.create(instanceProperties, dynamoDB);
+    }
+
     @TempDir
-    public java.nio.file.Path folder;
+    public java.nio.file.Path tempDir;
 
     @Test
     void shouldDeleteMessages() throws Exception {
         // Given
-        DynamoDBCompactionJobStatusStoreCreator.create(instanceProperties, dynamoDB);
-        CompactionJobStatusStore jobStatusStore = CompactionJobStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
-        DynamoDBCompactionTaskStatusStoreCreator.create(instanceProperties, dynamoDB);
-        CompactionTaskStatusStore taskStatusStore = CompactionTaskStatusStoreFactory.getStatusStore(dynamoDB, instanceProperties);
         // - Create four files of sorted data
-        String folderName = createTempDirectory(folder, null).toString();
-        String file1 = folderName + "/file1.parquet";
-        String file2 = folderName + "/file2.parquet";
-        String file3 = folderName + "/file3.parquet";
-        String file4 = folderName + "/file4.parquet";
-        FileInfo fileInfo1 = FileInfo.builder()
-                .filename(file1)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo2 = FileInfo.builder()
-                .filename(file2)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo3 = FileInfo.builder()
-                .filename(file3)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        FileInfo fileInfo4 = FileInfo.builder()
-                .filename(file4)
-                .fileStatus(FileInfo.FileStatus.ACTIVE)
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        ParquetWriter<Record> writer1 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file1), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i);
-            record.put("value1", (long) 2 * i);
-            record.put("value2", 987654321L);
-            writer1.write(record);
-        }
-        writer1.close();
-        ParquetWriter<Record> writer2 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file2), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i + 1);
-            record.put("value1", 1001L);
-            record.put("value2", 123456789L);
-            writer2.write(record);
-        }
-        writer2.close();
-        ParquetWriter<Record> writer3 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file3), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i);
-            record.put("value1", (long) 2 * i);
-            record.put("value2", 987654321L);
-            writer3.write(record);
-        }
-        writer3.close();
-        ParquetWriter<Record> writer4 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(file4), schema);
-        for (int i = 0; i < 100; i++) {
-            Record record = new Record();
-            record.put("key", (long) 2 * i + 1);
-            record.put("value1", 1001L);
-            record.put("value2", 123456789L);
-            writer4.write(record);
-        }
-        writer4.close();
+        StateStore stateStore = getStateStore();
+        FileInfo fileInfo1 = writeFileAtRootWith100Records("file1.parquet", i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i,
+                        "value1", (long) 2 * i,
+                        "value2", 987654321L)));
+        FileInfo fileInfo2 = writeFileAtRootWith100Records("file2.parquet", i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i + 1,
+                        "value1", 1001L,
+                        "value2", 123456789L)));
+        FileInfo fileInfo3 = writeFileAtRootWith100Records("file3.parquet", i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i,
+                        "value1", (long) 2 * i,
+                        "value2", 987654321L)));
+        FileInfo fileInfo4 = writeFileAtRootWith100Records("file4.parquet", i ->
+                new Record(Map.of(
+                        "key", (long) 2 * i + 1,
+                        "value1", 1001L,
+                        "value2", 123456789L)));
+
         // - Update Dynamo state store with details of files
-        stateStore().addFiles(Arrays.asList(fileInfo1, fileInfo2, fileInfo3, fileInfo4));
+        stateStore.addFiles(List.of(fileInfo1, fileInfo2, fileInfo3, fileInfo4));
         // - Create two compaction jobs and put on queue
-        CompactionJob compactionJob1 = CompactionJob.builder()
-                .tableId(tableId)
-                .jobId("job1")
-                .partitionId("root")
-                .dimension(0)
-                .inputFiles(Arrays.asList(file1, file2))
-                .isSplittingJob(false)
-                .outputFile(folderName + "/output1.parquet").build();
-        CompactionJob compactionJob2 = CompactionJob.builder()
-                .tableId(tableId)
-                .jobId("job2")
-                .partitionId("root")
-                .dimension(0)
-                .inputFiles(Arrays.asList(file3, file4))
-                .isSplittingJob(false)
-                .outputFile(folderName + "/output2.parquet").build();
+        CompactionJob job1 = compactionJobForFiles("job1", "output1.parquet", fileInfo1, fileInfo2);
+        CompactionJob job2 = compactionJobForFiles("job2", "output2.parquet", fileInfo3, fileInfo4);
         CompactionJobSerDe jobSerDe = new CompactionJobSerDe(tablePropertiesProvider);
-        String job1Json = jobSerDe.serialiseToString(compactionJob1);
-        String job2Json = jobSerDe.serialiseToString(compactionJob2);
+        String job1Json = jobSerDe.serialiseToString(job1);
+        String job2Json = jobSerDe.serialiseToString(job2);
         SendMessageRequest sendMessageRequest = new SendMessageRequest()
                 .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
                 .withMessageBody(job1Json);
@@ -250,12 +201,7 @@ public class CompactSortedFilesRunnerLocalStackIT {
         sqs.sendMessage(sendMessageRequest);
 
         // When
-        CompactSortedFilesRunner runner = new CompactSortedFilesRunner(
-                instanceProperties, ObjectFactory.noUserJars(),
-                tablePropertiesProvider, PropertiesReloader.neverReload(), stateStoreProvider, jobStatusStore, taskStatusStore,
-                "task-id", instanceProperties.get(COMPACTION_JOB_QUEUE_URL), sqs, null, CompactionTaskType.COMPACTION,
-                1, 0);
-        runner.run();
+        createJobRunner("task-id").run();
 
         // Then
         // - There should be no messages left on the queue
@@ -265,9 +211,75 @@ public class CompactSortedFilesRunnerLocalStackIT {
         ReceiveMessageResult result = sqs.receiveMessage(receiveMessageRequest);
         assertThat(result.getMessages()).isEmpty();
         // - Check DynamoDBStateStore has correct active files
-        List<FileInfo> activeFiles = stateStore().getActiveFiles();
+        List<FileInfo> activeFiles = stateStore.getActiveFiles();
         assertThat(activeFiles)
                 .extracting(FileInfo::getFilename)
-                .containsExactlyInAnyOrder(compactionJob1.getOutputFile(), compactionJob2.getOutputFile());
+                .containsExactlyInAnyOrder(job1.getOutputFile(), job2.getOutputFile());
+    }
+
+    @Test
+    void shouldPutMessageBackOnSQSQueueIfCompactionJobFailed() throws Exception {
+        // Given
+        StateStore stateStore = getStateStore();
+        FileInfoFactory factory = FileInfoFactory.from(schema, stateStore);
+        CompactionJob job = compactionJobForFiles("job1", "output1.parquet",
+                factory.rootFile("not-a-file.parquet", 0L));
+        CompactionJobSerDe jobSerDe = new CompactionJobSerDe(tablePropertiesProvider);
+        String job1Json = jobSerDe.serialiseToString(job);
+        SendMessageRequest sendMessageRequest = new SendMessageRequest()
+                .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
+                .withMessageBody(job1Json);
+        sqs.sendMessage(sendMessageRequest);
+
+        // When
+        createJobRunner("task-id").run();
+
+        // Then
+        // - The compaction job should be put back on the queue
+        ReceiveMessageRequest receiveMessageRequest = new ReceiveMessageRequest()
+                .withQueueUrl(instanceProperties.get(COMPACTION_JOB_QUEUE_URL))
+                .withWaitTimeSeconds(2);
+        ReceiveMessageResult result = sqs.receiveMessage(receiveMessageRequest);
+        assertThat(result.getMessages())
+                .extracting(Message::getBody)
+                .containsExactly(job1Json);
+        // - No active files should be in the state store
+        assertThat(stateStore.getActiveFiles()).isEmpty();
+    }
+
+
+    private CompactSortedFilesRunner createJobRunner(String taskId) {
+        return new CompactSortedFilesRunner(
+                instanceProperties, ObjectFactory.noUserJars(),
+                tablePropertiesProvider, PropertiesReloader.neverReload(), stateStoreProvider, jobStatusStore, taskStatusStore,
+                taskId, instanceProperties.get(COMPACTION_JOB_QUEUE_URL), sqs, null, CompactionTaskType.COMPACTION, 1, 0);
+    }
+
+    private FileInfo writeFileAtRootWith100Records(String filename, Function<Integer, Record> recordCreator) {
+        FileInfo fileInfo = FileInfo.builder()
+                .filename(tempDir + "/" + filename)
+                .fileStatus(FileInfo.FileStatus.ACTIVE)
+                .partitionId("root")
+                .numberOfRecords(100L)
+                .build();
+        try (ParquetWriter<Record> writer1 = ParquetRecordWriterFactory.createParquetRecordWriter(new Path(fileInfo.getFilename()), schema)) {
+            for (int i = 0; i < 100; i++) {
+                writer1.write(recordCreator.apply(i));
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+        return fileInfo;
+    }
+
+    private CompactionJob compactionJobForFiles(String jobId, String outputFilename, FileInfo... fileInfos) {
+        return CompactionJob.builder()
+                .tableId(tableId)
+                .jobId(jobId)
+                .partitionId("root")
+                .dimension(0)
+                .inputFileInfos(List.of(fileInfos))
+                .isSplittingJob(false)
+                .outputFile(tempDir + "/" + outputFilename).build();
     }
 }
